<resources>
    <string name="app_name">Your Recipes</string>
    <string name="app_name_short">Your Recipes</string>
    <string name="api_endpoint">https://api.recipe.hz.edu.vn/api/</string>

    <!--bottom navigation title-->
    <string name="title_nav_home">Home</string>
    <string name="title_nav_recent">Explore</string>
    <string name="title_nav_recent2">Recent</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="title_nav_video">Video</string>

    <!-- Menu -->
    <string name="Search">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Exit">Exit App</string>
    <string name="Request_Recipe">Request Recipe</string>
    <string name="Request">Request</string>
    <string name="Notification">Notification</string>
    <string name="allow_ads">Allow Ads in App</string>

    <!-- Single -->
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="method">Method</string>
    <string name="loading_dialog">Loading</string>



    <!--    OnBoarding-->
    <string name="onboarding_title_1">Welcome to Your Recipes</string>
    <string name="onboarding_title_2">Discover</string>
    <string name="onboarding_title_3">Explore</string>
    <string name="onboarding_subtitle_1">Your Recipes is a food recipe app that provides a variety of recipes from around the world</string>
    <string name="onboarding_subtitle_2">Discover a variety of recipes from around the world</string>
    <string name="onboarding_subtitle_3">Explore a variety of recipes from around the world</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--    Favourite Fragment-->
    <string name="title_login">Log in to access your Favorite Recipes</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="create_account_text">Don\'t have an account? Create one</string>
    <string name="login_button_text">LOGIN</string>
    <string name="register_text">Register</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Re-enter your password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">User Email</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">place_holder</string>
    <string name="description">Description</string>

    <string name="lorem_ipsum">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="loading">loading...</string>
    <string name="menu_refresh">Refresh</string>
    <string name="load_more">Load more</string>

</resources>