<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/About"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/Logout"
        android:icon="@drawable/ic_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/Exit"
        android:icon="@drawable/ic_search"
        app:showAsAction="never"/>
</menu>