<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:background="@drawable/box_background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Request_Recipe"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor = "@color/MainDarkText"
        android:background="@drawable/box_background_top_left"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/Request_Recipe"
            android:textColor="@color/MainText"
            />

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input name of recipe that you want"
            android:textColor="@color/MainText"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:id="@+id/buttonCancel"
                android:layout_weight="1"
                android:layout_marginEnd="7dp"
                android:background="@drawable/button_cancel"
                android:textColor="@color/MainDarkText"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Request"
                android:id="@+id/buttonSearch"
                android:layout_weight="1"
                android:layout_marginStart="7dp"
                android:background="@drawable/button_action"
                android:textColor="@color/MainDarkText"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>